<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="label_title">title</string>
    <string name="label_description">(description)</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_daily">Daily</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="label_priority">Priority</string>
</resources>
